[bumpversion]
current_version = 18.11.6
commit = True
tag = True

[bumpversion:file:VERSION]

[bumpversion:file:README.rst]

[bumpversion:file:python_secrets/__init__.py]

[bumpversion:file:python_secrets/google_oauth2.py]

[wheel]
universal = 1

[metadata]
description-file = README.rst
name = python-secrets

