[bumpversion]
current_version = 21.9.1
commit = False
tag = False

[bumpversion:file:VERSION]

[bumpversion:file:README.rst]

[bumpversion:file:psec/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/python_secrets/tarball/master
url = https://github.com/davedittrich/python_secrets

[options]
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Intended Audience :: Other Audience
	Intended Audience :: Science/Research
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Security
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Installation/Setup
	Topic :: Utilities
include_package_data = True
keywords = python_secrets, cliff, cli
license = Apache Software License
packages = find:
scripts = 
	bin/psec
zip_safe = False

[options.packages.find]
include = 
	psec
	bin
exclude = 
	tests*
	libs*

[options.entry_points]
console_scripts = 
	psec = psec.main:main
psec = 
	environments create = psec.environments.create:EnvironmentsCreate
	environments default = psec.environments.default:EnvironmentsDefault
	environments delete = psec.environments.delete:EnvironmentsDelete
	environments list = psec.environments.list:EnvironmentsList
	environments path = psec.environments.path:EnvironmentsPath
	environments rename = psec.environments.rename:EnvironmentsRename
	environments tree = psec.environments.tree:EnvironmentsTree
	groups create = psec.groups.create:GroupsCreate
	groups delete = psec.groups.delete:GroupsDelete
	groups list = psec.groups.list:GroupsList
	groups path = psec.groups.path:GroupsPath
	groups show = psec.groups.show:GroupsShow
	run = psec.run:Run
	secrets backup = psec.secrets.backup:SecretsBackup
	secrets create = psec.secrets.create:SecretsCreate
	secrets delete = psec.secrets.delete:SecretsDelete
	secrets describe = psec.secrets.describe:SecretsDescribe
	secrets generate = psec.secrets.generate:SecretsGenerate
	secrets get = psec.secrets.get:SecretsGet
	secrets path = psec.secrets.path:SecretsPath
	secrets restore = psec.secrets.restore:SecretsRestore
	secrets send = psec.secrets.send:SecretsSend
	secrets set = psec.secrets.set:SecretsSet
	secrets show = psec.secrets.show:SecretsShow
	secrets tree = psec.secrets.tree:SecretsTree
	ssh config = psec.ssh:SSHConfig
	ssh known-hosts add = psec.ssh:SSHKnownHostsAdd
	ssh known-hosts extract = psec.ssh:SSHKnownHostsExtract
	ssh known-hosts remove = psec.ssh:SSHKnownHostsRemove
	template = psec.template:Template
	utils myip = psec.utils.myip:MyIP
	utils myip methods = psec.utils.myip:MyIPMethods
	utils netblock = psec.utils.netblock:Netblock
	utils set-aws-credentials = psec.utils.set_aws_credentials:SetAWSCredentials
	utils tfstate backend = psec.utils.tfbackend:TfBackend
	utils tfstate output = psec.utils.tfoutput:TfOutput
	utils yaml-to-json = psec.utils.yaml_to_json:YAMLToJSON
