[bumpversion]
current_version = 22.6.1
commit = False
tag = False

[bumpversion:file:VERSION]

[bumpversion:file:README.rst]

[bumpversion:file:psec/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/python_secrets/tarball/master
url = https://github.com/davedittrich/python_secrets

[options]
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Intended Audience :: Other Audience
	Intended Audience :: Science/Research
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Security
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Installation/Setup
	Topic :: Utilities
include_package_data = True
keywords = python_secrets, cliff, cli
license = Apache Software License
scripts = 
	bin/psec
zip_safe = False

[options.entry_points]
console_scripts = 
	psec = psec.__main__:main
psec = 
	about = psec.about:About
	environments create = psec.cli.environments.create:EnvironmentsCreate
	environments default = psec.cli.environments.default:EnvironmentsDefault
	environments delete = psec.cli.environments.delete:EnvironmentsDelete
	environments list = psec.cli.environments.list:EnvironmentsList
	environments path = psec.cli.environments.path:EnvironmentsPath
	environments rename = psec.cli.environments.rename:EnvironmentsRename
	environments tree = psec.cli.environments.tree:EnvironmentsTree
	init = psec.cli.init:Init
	groups create = psec.cli.groups.create:GroupsCreate
	groups delete = psec.cli.groups.delete:GroupsDelete
	groups list = psec.cli.groups.list:GroupsList
	groups path = psec.cli.groups.path:GroupsPath
	groups show = psec.cli.groups.show:GroupsShow
	run = psec.cli.run:Run
	secrets backup = psec.cli.secrets.backup:SecretsBackup
	secrets create = psec.cli.secrets.create:SecretsCreate
	secrets delete = psec.cli.secrets.delete:SecretsDelete
	secrets describe = psec.cli.secrets.describe:SecretsDescribe
	secrets find = psec.cli.secrets.find:SecretsFind
	secrets generate = psec.cli.secrets.generate:SecretsGenerate
	secrets get = psec.cli.secrets.get:SecretsGet
	secrets path = psec.cli.secrets.path:SecretsPath
	secrets restore = psec.cli.secrets.restore:SecretsRestore
	secrets send = psec.cli.secrets.send:SecretsSend
	secrets set = psec.cli.secrets.set:SecretsSet
	secrets show = psec.cli.secrets.show:SecretsShow
	secrets tree = psec.cli.secrets.tree:SecretsTree
	ssh config = psec.cli.ssh:SSHConfig
	ssh known-hosts add = psec.cli.ssh:SSHKnownHostsAdd
	ssh known-hosts extract = psec.cli.ssh:SSHKnownHostsExtract
	ssh known-hosts remove = psec.cli.ssh:SSHKnownHostsRemove
	template = psec.cli.template:Template
	utils myip = psec.cli.utils.myip:MyIP
	utils myip methods = psec.cli.utils.myip:MyIPMethods
	utils netblock = psec.cli.utils.netblock:Netblock
	utils set-aws-credentials = psec.cli.utils.set_aws_credentials:SetAWSCredentials
	utils tfstate backend = psec.cli.utils.tfbackend:TfBackend
	utils tfstate output = psec.cli.utils.tfoutput:TfOutput
	utils yaml-to-json = psec.cli.utils.yaml_to_json:YAMLToJSON
